stylesheets: display ride number correctly on mobile devises

--- a/app/assets/stylesheets/crisp/blog.css.scss
+++ b/app/assets/stylesheets/crisp/blog.css.scss
@@ -77,7 +77,8 @@
       float: right;
     }
     footer {
-      width: 12%;
+      float: left;
+      width: 11%;
       display: block;
       margin-right: 2%;
     }
